--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -42,6 +42,12 @@
         font-weight: 600;
         font-size: 14px;
         @include noselect();
+
+        &.disabled {
+          opacity: 0.5;
+          pointer-events: none;
+        }
+
         &.active {
           background: #ffffff;
           box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
